<resources>
    <string name="app_name">Rozihub Professionals</string>
    <string name="error_no_text">Required Input Field</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home_actvity">UserHomeActvity</string>
    <string name="title_home">New</string>
    <string name="title_dashboard">MyBooking</string>
    <string name="title_notifications">Payments</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRATION</string>
    <string name="forgetpass">FORGOT PASSWORD?</string>
    <string name="cofirmpass">Confirm Password</string>
    <string name="createnew">Please create your new password</string>
    <string name="newpass">NEW PASSWORD</string>
    <string name="resetpass">Reset Password</string>
    <string name="forgtext">We just need your registered email address to send you password reset</string>
    <string name="otp">Will send you six digit OTP to reset Password</string>
    <string name="forgetmobile">E-mail Id/Mobile Number</string>
    <string name="reset">Reset</string>
    <string name="email">"E-mail Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forget Password?</string>
    <string name="newhere">New Here? SignUp</string>
    <string name="category_profess">Rozihub professionals</string>
    <string name="category_center">Rozihub service</string>
    <string name="category_service">Rozihub center</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="title_activity_my_booking_actvity">MyBookingActvity</string>
    <string name="action_settings">Help</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="continue1">Continue</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="no_location">No location available</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="valid_input_number">please input valid 10 digit number</string>
    <string name="valid_otp">please input valid otp</string>
    <string name="valid_email">Please provide valid email Adress</string>
    <string name="valid">please provide valid input</string>
    <string name="title_activity_image_detail_actvity">ImageDetailActvity</string>

</resources>
