<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rel1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

        <TextView
                android:id="@+id/forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/forgetpass"/>
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textcolour"
                android:layout_marginTop="@dimen/_15sdp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textColor="@color/textcolour"
                    android:id="@+id/et_forgetmobile"
                    android:inputType="text"
                    android:hint="@string/forgetmobile"
                    android:backgroundTint="@color/edittext_line_colour"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset"
                android:text="@string/reset"
                android:layout_marginTop="@dimen/_30sdp"
                android:textColor="@color/white"
                android:background="@drawable/round"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/otp"


        />
    </LinearLayout>


</RelativeLayout>