<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rel1"
            android:orientation="vertical"
            android:layout_margin="@dimen/_20sdp"
    >

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textcolour"
                android:layout_marginTop="@dimen/_15sdp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textcolour"
                    android:hint='@string/email'
                    android:id="@+id/et_email"
                    android:backgroundTint="@color/edittext_line_colour"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textcolour"
                android:layout_marginTop="@dimen/_15sdp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/textcolour"
                    android:hint="@string/password"
                    android:id="@+id/et_password"
                    android:backgroundTint="@color/edittext_line_colour"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>





        <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/round"
                android:textColor="@color/white"
                android:text="@string/login"/>
        <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:textColor="@color/colorsplash"
                android:textSize="@dimen/_15sdp"
                android:text="@string/forgot"/>
        <Button
                android:id="@+id/newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:textSize="@dimen/_15sdp"
                android:background="@drawable/rounduser"
                android:textColor="@color/colorsplash"
                android:text="@string/newhere"

        />


    </LinearLayout>


</RelativeLayout>
